--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,8 @@
 * {
-    font-family: "Oswald", sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-weight: 400;
-    color: #5D5D7D;
+    font-family: 'Oswald', sans-serif;
 }
 
 .wrapper {
@@ -15,11 +13,12 @@
 .container-left {
     display: inline-block;
     width: 60%;
-    padding: 136px;
     margin-top: 15%;
+    padding-left: 136px;
+
 }
 
-.container-rigth {
+.container-right {
     display: inline-block;
     background-color: rgba(93, 93, 125, 0.16);
     height: 100vh;
@@ -34,14 +33,18 @@ img {
 }
 
 h1 {
+    font-weight: 400;
     font-size: 70px;
     line-height: 80px;
+    color: #5D5D7D;
     width: 368px;
 }
 
 p {
+    font-weight: 400;
     font-size: 28px;
     line-height: 48px;
+    color: #5D5D7D;
     opacity: 0.6;
     margin: 15px 0;
     width: 540px;
@@ -51,90 +54,83 @@ button {
     width: 269px;
     height: 62px;
     background: #9499EA;
-    box-shadow: (0 10px 24px rgba(148, 153, 234, 0.10));
-    border: none;
-    border-radius: 30px;
-    text-align: center;
+    box-shadow: 0px 10px 24px rgba(148, 153, 234, 0.0979959);
+    color: #FFFFFF;
     font-size: 24px;
     line-height: 36px;
-    color: #FFFFFF;
+    text-align: center;
+    border: none;
+    border-radius: 30px;
     cursor: pointer;
 }
 
 button:hover {
     opacity: 0.8;
 }
-
 button:active {
-    opacity: 0.5;
+    opacity: 0.4;
 }
 
 a {
     font-size: 28px;
     line-height: 41px;
+    color: #5D5D7D;
     margin-right: 41px;
     cursor: pointer;
 }
-    
+
 a:nth-child(2) {
-    opacity: 0.4;
+    opacity: 0.6;
 }
-
 a:hover {
-    opacity: 0.4;
+opacity: 0.2;
 }
-
 a:active {
     opacity: 0.8;
 }
 
 header {
     margin: 24px 0 0 57px;
+
 }
 
 @media screen and (max-width: 900px){
-    .container-left {
-        width: 100%;
-        height: 50%;
-        padding: 0;
-        margin: 0;
-    }
-
-    .container-rigth {
-        display: block;
-        height: auto;
-        width: 100%;
-        position: static;
-        padding: 40px;
-    }
-
-    img {
-        position: static;
-        max-width: 90%;
-    }
-
-    header {
-        display: none;
-    }
-
-    h1 {
-        font-size: 36px;
-        line-height: 52px;
-        width: auto;
-        margin: 58px 50px 0 50px;
-        text-align: center;
-    }
-
-    p {
-        margin: 15px 40px;
-        width: auto;
-        text-align: center;
-        font-size: 14px;
-        line-height: 24px;
-    }
-
-    button {
-        margin: 0 auto;
-        display: block;
-    }
+        .container-left{
+            width: 100%;
+            height: 50%;
+            padding: 0;
+            margin: 0;
+        }   
+        .container-right {
+            display: block;
+            height: auto;
+            width: 100%;
+            position: static;
+            padding: 40px;
+        }
+        img {
+            position: static;
+            width: 90%;
+        }
+        header {
+            display: none;
+        }
+        h1 {
+            font-size: 36px;
+            font-weight: 52px;
+            width: auto;
+            margin: 58px 50px 0 50px;
+            text-align: center;
+        }
+        p {
+            margin: 15px 40px;
+            width: auto;
+            text-align: center;
+            font-size: 14px;
+            line-height: 24px;
+        }
+        button {
+            margin: 0 auto;
+            display: block;
+        }
 }
